# object_follower

./: CMakeLists.txt  README.md  package.xml
config/: follower.yaml  threshold.yaml
include/follower_manager/: follower_manager.hpp
include/object_follower/: object_follower.hpp
launch/: start.launch
models/green_ball/: model.config  model.sdf
pcl_preprocess/: CMakeLists.txt  package.xml
pcl_preprocess/launch/: convexhull_planar_surface_reconstruction.launch  extract_polygonal_prism_data_segmentation.launch  pcl_filter.launch  pcl_to_img.launch  sac_segmentation.launch
pcl_preprocess/src/: pc_to_img_node.cpp
src/: object_follower.cpp  object_follower_node.cpp
src/follower_manager/: follower_manager.cpp
src/utility/: color_thresholding.cpp
